# muscle

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
muscle/: Cargo.toml
muscle-az/: Cargo.toml
muscle-az/src/: lib.rs
muscle-core/: Cargo.toml
muscle-core/src/: json.rs  lib.rs  module.rs  project.rs
muscle/src/: main.rs
muscle/src/command/: init.rs
muscle/src/util/: mod.rs  wildcard.rs
schemas/: module.json  project.json
src/: cli.rs  json_rpc.rs  main.rs
src/az/: bicep.rs  bicep_cli.rs  bicep_rpc.rs  json_rpc.rs  mod.rs
src/command/: build.rs  health.rs  init.rs  mod.rs  module.rs
src/core/: domain.rs  json.rs  mod.rs  module.rs  module_config.rs  project.rs  project_config.rs
src/util/: fs.rs  mod.rs  output.rs
